--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "full-website-tut",
-  "homepage": "https://MikeParkinWits.github.io/",
+  "homepage": "https://MikeParkinWits.github.io/react-test-site/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
